Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
 </p>
         <!-- span text 'PHARRELLWILLIAMS.COM' -->
 <span>PHARRELLWILLIAMS.COM</span>
-        <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
-<img src="images/columbia-logo.png" alt="columbia logo">
+        <!-- display the images hosted on [] -->
+<img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png" alt="columbia logo">
         <!-- span text 'COLUMBIARECORDS.COM' -->
         <span>COLUMBIARECORDS.COM</span>
 
         <br>
-         <img src="images/sony-logo.png" alt="sony logo">
-        <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
+         <img src="https://s3.amazonaws.com/learn-verified/sony-logo.png" alt="sony logo">
+        <!-- display the images hosted on [] -->
 
       </div>
     </div>
